--- a/Select_Server/Select_Server.vcxproj
+++ b/Select_Server/Select_Server.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{da39cd59-4954-4050-93db-48e5619bbb2c}</ProjectGuid>
-    <RootNamespace>PacketServer</RootNamespace>
+    <ProjectGuid>{11be88b6-aab3-4191-b534-41d6796f17aa}</ProjectGuid>
+    <RootNamespace>SelectServer</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -79,7 +79,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
     <OutDir>../../output/debug</OutDir>
-    <IntDir>../../output/debug/Packet_Server</IntDir>
+    <IntDir>../../output/debug/Select_Server</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
@@ -141,10 +141,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="NetUser.cpp" />
+    <ClCompile Include="NetWork.cpp" />
     <ClCompile Include="Packet.cpp" />
     <ClCompile Include="Sample.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="NetUser.h" />
+    <ClInclude Include="NetWork.h" />
     <ClInclude Include="Packet.h" />
     <ClInclude Include="Protocol.h" />
   </ItemGroup>
